2002-03-30  Martin Weber <martweb@gmx.net>

	* output-pdf.c (out_splines): Reduced color precision to get 
	smaller files.

	* output-p2e.c (out_splines): Likewise.

	* output-eps.c (out_splines): Likewise.

	* output-epd.c (out_splines): Likewise.

	* main.c (main): using binary mode for dumping bitmaps.

	* pxl-outline.c (*): The y values of the outline were always to 
	high by one.

	Message-ID: <3CA3853C.629CCFD6@gmx.net> and
	Message-ID: <3CA57C3F.C35F60F7@gmx.net>.

2002-03-30  Masatake YAMATO  <yamato@redhat.com>

	* pxl-outline.c (find_outline_pixels): moved
	test_cancel func to inner loop.

2002-03-28  Martin Weber <martweb@gmx.net>

	* HACKING (Tools for debugging output): Updated.

	* README: Updated.

	* output.c (output_formats): Unify dxf output entry.

	* main.c (USAGE1): dpi is used in mif output,
	not emf.

2002-03-28  Martin Weber <martweb@gmx.net>

	* output-emf.c: rewritten with Allen Barnett.
	
2002-03-28  Masatake YAMATO  <yamato@redhat.com>

	* HACKING (Tool for debugging output):
	Write about viewers.

2002-03-28  Martin Weber <martweb@gmx.net>

	* despeckle.c: despeckle now also works on gray
	scale images.

2002-03-20  Martin Weber <martweb@gmx.net>

	* main.c (main): Moved dumping of the bitmap so that quantize 
	and despeckle are also in effect.

	Message-ID: <3C9A4462.47488039@gmx.net>.

2002-03-24  Ian MacPhedran <Ian_MacPhedran@engr.USask.Ca>

	* output-fig.c (out_fig_splines): Added a new 
	local variable, fig_spline_close.

2002-03-20  Martin Weber <martweb@gmx.net>

	* output-emf.c (GetEmfStats, GetEmfStats): 
	Number of records was not counted correctly.

	Message-ID: <15225.1016698302@www11.gmx.net>.

2002-03-21  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (libautotrace_a_SOURCES): Added
	strgicmp.c. This function must be in libautotrace.a
	because input.c uses.

2002-03-20  Martin Weber <martweb@gmx.net>

	* README updated.
	
	* TODO: New file.

2002-03-20  Martin Weber <martweb@gmx.net>
